argocd/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kickstart
  annotations:
    keel.sh/policy: force
spec:
  selector:
    matchLabels:
      app: kickstart
  template:
    metadata:
      labels:
        app: kickstart
    spec:
      containers:
      - name: kickstart
        image: lilshan24/kickstart-website:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "200m"
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 1
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 1
