argocd/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kickstart
spec:
  selector:
    app: kickstart
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
