argocd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kickstart
spec:
  rules:
  - host: kickstart.everestsummitpm.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kickstart
            port:
              number: 80
